made ui more interactive

--- a/style.css
+++ b/style.css
@@ -33,6 +33,14 @@ body {
   font-weight: bold;
 }
 
+.link-backer-success {
+  background: rgba(48, 248, 48, 0.299);
+}
+
+.link-backer-error {
+  background: rgba(104, 13, 13, 0.366);
+}
+
 .main {
   margin-top: 1rem;
 }
@@ -47,7 +55,6 @@ body {
 .main .site-list div {
   border-bottom: 1px solid #343434;
   padding: 5px;
-  background: pink;
 }
 .main .site-list:last-child {
   border-bottom: none;
