--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,13 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-html, body {
+html,
+body {
   height: 100%;
   width: 100%;
 }
@@ -12,10 +15,14 @@ html, body {
 body {
   margin: 0 auto;
   text-align: center;
-  font-family: 'Roboto', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", "Helvetica Neue", Arial, Helvetica, sans-serif;
   background: #e4e4e4;
   color: #232323;
+
+  display: flex;
+  flex-direction: column;
 }
+
 
 .status-success::after {
   content: " - Url Working";
@@ -47,11 +54,23 @@ body {
 }
 
 .main {
-  margin-top: 1rem;
 
   .site-generator-btn {
-    padding: 5px;
+    border: none;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.4);
+    width: 35%;
+    padding: 10px;
+    font-size: 16px;
+    background-color: papayawhip;
+    color: #232323;
+  }
 
+  .site-generator-btn:hover {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+    background-color: rgb(255, 233, 198)
+  }
+  .site-generator-btn:active {
+    background-color: papayawhip;
   }
 
   .site-list {
@@ -60,15 +79,13 @@ body {
     flex-direction: column;
     div {
       border-bottom: 1px solid #343434;
-      
+
       padding: 5px;
     }
-    
   }
   .site-list:last-child {
     border-bottom: none;
   }
-
 }
 
 .brand {
@@ -81,16 +98,21 @@ body {
     width: 70px;
   }
 
-  .subtitle {
-    margin-bottom: .5rem;
-  }
-
   .warning-wrap {
-    border-radius: 3px;
-    box-shadow: 0 0 3px rgba(0,0,0,0.7);
-    width: 85%;
-    margin: 0 auto;
-    padding: .5rem;
-    background: #9a9a9a;
+    padding: 5px;
+    // border-radius: 3px;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
+    // width: 85%;
+    margin: .5rem auto 1rem auto;
+    background: papayawhip;
   }
 }
+
+.known-errors {
+  background: PapayaWhip;
+  box-shadow: 0 0 2px rgba(0,0,0,0.2);
+  padding: .5rem;
+  width: 100%;
+  margin-top: 1rem;
+}
+
