--- a/style.scss
+++ b/style.scss
@@ -65,10 +65,20 @@ body {
   font-size: 12px;
 }
 
+.https-not-present::before {
+  content: 'Not Secure' !important;
+  color: $brand-black !important;
+  margin-right: 5px !important;
+  font-weight: bold !important;
+  font-size: 12px !important;
+  background: $brand-red-clear !important;
+  padding: 2px !important;
+}
+
 // start tags
 
 @mixin tag-basics {
-  padding: 2px;
+  // padding: 2px;
   border-radius: 3px;
   margin-left: 5px;
   background-color: $brand-white;
@@ -76,6 +86,8 @@ body {
   font-size: 12px;
   font-family: 'Font Awesome 5 Free';
   font-weight: 900;
+  border-bottom: none;
+  // text-decoration: none;
 }
 
 .tag-software::after {
@@ -144,9 +156,9 @@ body {
 
 
 .tag-empty::after {
-  font-family: "Roboto", "Helvetica Neue", Arial, Helvetica, sans-serif !important;
+  // font-family: "Roboto", "Helvetica Neue", Arial, Helvetica, sans-serif !important;
   font-weight: bold !important;
-  content: "Parked/Private Domain";
+  content: "\f023" + " " + "Parked/Private Domain";
   background: $brand-white;
   @include tag-basics;
 }
@@ -178,7 +190,12 @@ body {
     font-size: 16px;
     background-color: $brand-black;
     color: $brand-white;
+    border-bottom: 1px solid $brand-white;
   }
+  .site-generator-btn:last-of-type {
+    border-bottom: none;
+  }
+
 
   .site-generator-btn:hover {
     box-shadow: 0 0 5px $brand-black-semi-clear;
@@ -194,27 +211,25 @@ body {
     justify-content: center;
     align-items: center;
     gap: 5px;
-    font-size: 12px;
+    font-size: 14px;
   }
 
   .site-list {
+    margin: 0 auto;
+    width: 75%;
     margin-top: 1rem;
-    display: flex;
-    flex-direction: column;
-    div {
+    .site-div {
       display: flex;
       align-items: center;
       justify-content: center;
       border-bottom: 1px solid $brand-black;
-      padding: 5px;
+      padding: 4px;
 
       a {
         text-decoration: none;
+
       }
-    }
-  }
-  .site-list:last-child {
-    border-bottom: none;
+    }    
   }
 }
 
