--- a/style.scss
+++ b/style.scss
@@ -2,7 +2,7 @@ $brand-blue: #3891a6;
 $brand-black: #211a1d;
 $brand-black-semi-clear: #211a1d98;
 $brand-black-clear: #211a1d30;
-$brand-white: #f8f0fb;
+$brand-white: #f4f4f4;
 $brand-white-clear: #f8f0fb55;
 $brand-green: #5efc8d;
 $brand-green-clear: #5efc8d70;
