--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,7 @@ body {
   background: #f4f4f4;
   color: #211a1d;
   display: flex;
+  flex-direction: column;
 }
 
 .status-success::after {
@@ -45,6 +46,7 @@ body {
 .status-for-sale::before {
   content: "Domain for sale: ";
   color: #211a1d;
+  font-weight: bold;
   font-size: 12px;
 }
 
@@ -243,6 +245,8 @@ body {
 .tag-container {
   display: flex !important;
   flex-direction: row;
+  align-items: center;
+  justify-content: center;
   gap: 5px;
 }
 
@@ -258,6 +262,20 @@ body {
 
 .link-removed {
   display: none !important;
+}
+
+.site-desc {
+  background: rgba(94, 252, 141, 0.4392156863);
+  color: #211a1d;
+  font-size: 14px;
+  margin: 5px 10%;
+  padding: 3px;
+  border-radius: 3px;
+}
+
+.site-desc::before {
+  content: "Site Description: ";
+  opacity: 0.8;
 }
 
 .main .site-generator-btn {
@@ -300,6 +318,7 @@ body {
 }
 .main .site-list .site-div a {
   text-decoration: none;
+  font-size: 20px;
 }
 
 .keywords {
